# external_mozjs

./: .travis.yml  CMakeLists.txt
include/mozjs-52/: js-config.h
include/mozjs-52/js/: RootingAPI.h  StructuredClone.h
include/mozjs-52/mozilla/: Compiler.h
prebuilt/linux_amd64_gcc/: mfbt-link.patch  mozjs_centos6.sh
test/: CMakeLists.txt  mozjs_test.cpp
